--- a/Templates/Framework.xcconfig
+++ b/Templates/Framework.xcconfig
@@ -8,11 +8,6 @@
 
 #include "../Carthage/Checkouts/xcconfigs/iOS/iOS-Framework.xcconfig"
 
-// The name ("common name") of a valid code-signing certificate in a keychain
-// within your keychain path. A missing or invalid certificate will cause a
-// build error.
-CODE_SIGN_IDENTITY[sdk=iphoneos*] = iPhone Developer
-
 // Code will load on this and later versions of iOS.  Framework APIs that are
 // unavailable in earlier versions will be weak-linked; your code should check
 // for null function pointers or specific system versions before calling newer
@@ -22,6 +17,9 @@ IPHONEOS_DEPLOYMENT_TARGET = 9.0
 // This is the project-relative path to the plist file that contains the
 // Info.plist information used by bundles.
 INFOPLIST_FILE = $(TARGET_NAME)/Info.plist
+
+// A string that uniquely identifies the bundle
+PRODUCT_BUNDLE_IDENTIFIER = %{BUNDLE_IDENTIFIER_PREFIX}.$(PRODUCT_NAME:rfc1034identifier)
 
 // The build system uses the selected device to set the correct value for the
 // UIDeviceFamily key it adds to the target's Info.plist file.
